# qgis-bridge

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
AGENT/: plan.md
AGENT/logs/: 2026-04-09-session-01.md  2026-04-09-session-02.md  2026-04-09-session-03.md  2026-04-09-session-04.md
docs/decisions/: ADR-001-two-component-architecture.md  ADR-002-tcp-socket-transport.md  ADR-003-data-via-temp-file.md  ADR-004-styling-via-qml.md  ADR-005-accessor-pattern.md  ADR-006-zero-required-dependencies.md  ADR-007-cloud-uri-no-auth-surface.md  ADR-008-function-first-api.md  ADR-009-monorepo-single-repository.md  ADR-010-uv-package-manager.md
notebooks/: demo.ipynb
qgis_plugin/: __init__.py  metadata.txt  plugin.py  server.py
src/qgis_bridge/: __init__.py  _accessor.py  _client.py  _core.py  _style.py  _temp.py  _uri.py
tests/: test_style.py  test_uri.py
