[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgis-bridge"
version = "0.1.0"
description = "Push spatial data from Python directly into a live QGIS session"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Raza Rizvi" }]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/R-Repo/qgis-bridge"
Repository = "https://github.com/R-Repo/qgis-bridge"
Issues = "https://github.com/R-Repo/qgis-bridge/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "geopandas>=0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_bridge"]
